fix css - header overflow and padding from footer

--- a/checkout/static/checkout/css/checkout.css
+++ b/checkout/static/checkout/css/checkout.css
@@ -62,7 +62,7 @@ table, form, .overview {
 }
 
 .overview {
-    max-height: 80%;
+    max-height: 650px;
     overflow-y: auto;
 }
 
