--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,6 +4,7 @@ body {
     width: 100%;
     height: 100%;
 }
+
 /*--- base.html header ---*/
 
 .title {
@@ -15,7 +16,6 @@ body {
 
 header {
     height: 88px;
-    overflow: hidden;
     position: fixed;
     width: 100%;
     z-index: 9999;
@@ -65,6 +65,7 @@ footer {
     margin-bottom: 0;
     padding-bottom: 0;
     width: 100%;
+    margin-top: 1.5rem;
 }
 
 footer a {
@@ -86,28 +87,13 @@ footer a {
     background-color: #0d47a1;
 }
 
-.sub-title {
-   font-family: 'Satisfy', cursive;
-    text-align: center;
-    font-size: 48px;
-    color: #0d47a1;
-    margin-top: 1.5rem;
+.bottom-margin {
+    margin-bottom: 2rem;
 }
-
 .message-container {
     position: fixed;
-    top: 87px;
+    top: 90px;
     right: 20px;
     z-index: 999999;
-}
-
-.message-container {
-    position: fixed;
-    top: 87px;
-    right: 20px;
-    z-index: 999999;
-}
-
-.toast-img {
-    max-width: 100px;
+    margin-top: 1rem;
 }
